--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/mdx": "^2.0.13",
+    "fumadocs-core": "^16.4.8",
+    "fumadocs-mdx": "^14.2.6",
+    "fumadocs-ui": "^16.4.8",
     "next": "16.1.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
