--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "packageManager": "pnpm@10.28.1",
   "engines": {
     "node": ">=18"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp",
+      "esbuild",
+      "unrs-resolver"
+    ]
   }
 }
