Add CMS configuration and improve document versioning validation

--- a/turbo.json
+++ b/turbo.json
@@ -1,15 +1,15 @@
 {
   "$schema": "https://turborepo.dev/schema.json",
   "ui": "tui",
-  "globalEnv": [
-    "DOCS_CMS_URL",
-    "DOCS_INCLUDE_DRAFTS",
-    "DOCS_EMAIL",
-    "DOCS_PASSWORD"
-  ],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
+      "env": [
+        "DOCS_CMS_URL",
+        "DOCS_INCLUDE_DRAFTS",
+        "DOCS_EMAIL",
+        "DOCS_PASSWORD"
+      ],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
