--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,12 +15,16 @@
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/mdx": "^2.0.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "^16.4.8",
     "fumadocs-ui": "^16.4.8",
+    "lucide-react": "^0.563.0",
     "next": "16.1.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "^9.39.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "5.9.2"
   }
 }
