--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,6 +11,9 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@base-ui/react": "^1.1.0",
+    "@hugeicons/core-free-icons": "^3.1.1",
+    "@hugeicons/react": "^1.1.4",
     "@repo/docs-source": "workspace:*",
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
@@ -19,7 +22,6 @@
     "clsx": "^2.1.1",
     "fumadocs-core": "^16.4.8",
     "fumadocs-ui": "^16.4.8",
-    "lucide-react": "^0.563.0",
     "next": "16.1.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
