--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -37,6 +37,7 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "^9.39.1",
+    "lexical": "^0.40.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.9.2"
   }
