chore: update pnpm workspace configuration and remove onlyBuiltDependencies
feat: add Prettier configuration file for consistent code formatting

fix: include NODE_ENV in Turbo build environment variables

--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "env": [
+        "NODE_ENV",
         "DOCS_CMS_URL",
         "DOCS_INCLUDE_DRAFTS",
         "DOCS_EMAIL",
