--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,44 +1,48 @@
 {
   "name": "docs",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --port 3001",
     "build": "next build",
-    "start": "next start",
+    "check-types": "next typegen && tsc --noEmit",
+    "dev": "next dev --port 3001",
     "lint": "eslint --max-warnings 0",
-    "check-types": "next typegen && tsc --noEmit"
+    "start": "next start"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
-    "@hugeicons/core-free-icons": "^3.1.1",
-    "@hugeicons/react": "^1.1.4",
-    "@payloadcms/richtext-lexical": "3.73.0",
+    "@payloadcms/next": "^3.74.0",
+    "@payloadcms/richtext-lexical": "^3.74.0",
     "@repo/docs-source": "workspace:*",
-    "@repo/ui": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.18",
-    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "fumadocs-core": "^16.4.8",
-    "fumadocs-ui": "^16.4.8",
-    "next": "16.1.0",
-    "postcss": "^8.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "fumadocs-core": "^16.5.0",
+    "fumadocs-ui": "^16.5.0",
+    "monaco-editor": "^0.55.1",
+    "next": "^16.1.6",
+    "payload": "^3.74.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-resizable-panels": "^4.6.0",
+    "shadcn": "^3.8.3",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.15.3",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "eslint": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^25.2.1",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
     "lexical": "^0.40.0",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "5.9.2"
+    "postcss": "^8.5.6",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0"
   }
 }
