Ran `pnpm format`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "docs",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "turbo run build",
     "check-types": "turbo run check-types",
@@ -14,6 +15,7 @@
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-packagejson": "3.0.0",
+    "prettier-plugin-tailwindcss": "0.7.2",
     "turbo": "^2.8.3",
     "typescript": "^5.9.3"
   },
