--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -17,16 +17,26 @@
     "@repo/docs-source": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "fumadocs-core": "^16.5.0",
     "fumadocs-ui": "^16.5.0",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
     "next": "^16.1.6",
+    "next-themes": "^0.4.6",
     "payload": "^3.74.0",
     "react": "^19.2.4",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.4",
     "react-resizable-panels": "^4.6.0",
+    "recharts": "3.7.0",
     "shadcn": "^3.8.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "vaul": "^1.1.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
