--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -18,18 +18,22 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "^3.74.0",
     "@payloadcms/next": "^3.74.0",
     "@payloadcms/richtext-lexical": "^3.74.0",
+    "@payloadcms/storage-s3": "^3.74.0",
+    "@payloadcms/translations": "^3.75.0",
     "@payloadcms/ui": "^3.74.0",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "graphql": "^16.12.0",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.6",
     "payload": "^3.74.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "sharp": "^0.34.5",
-    "@payloadcms/db-postgres": "^3.74.0"
+    "react-select": "^5.10.2",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.1",
