Centralized env files in the root

--- a/.env.production.example
+++ b/.env.production.example
@@ -14,6 +14,8 @@ S3_BUCKET=payload-media
 S3_REGION=us-east-1
 S3_ACCESS_KEY_ID=minioadmin
 S3_SECRET_ACCESS_KEY=replace-with-a-strong-minio-password
+S3_ENDPOINT=http://minio:9000
+S3_FORCE_PATH_STYLE=true
 
 # Docs <-> CMS connection
 DOCS_CMS_URL=http://cms:3000
