--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,13 @@ services:
     build:
       context: .
       dockerfile: docker/cms.Dockerfile
+      args:
+        S3_BUCKET: ${S3_BUCKET:?S3_BUCKET is required}
+        S3_REGION: ${S3_REGION:-us-east-1}
+        S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID:?S3_ACCESS_KEY_ID is required}
+        S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY:?S3_SECRET_ACCESS_KEY is required}
+        S3_ENDPOINT: http://minio:9000
+        S3_FORCE_PATH_STYLE: "true"
     restart: unless-stopped
     depends_on:
       postgres:
