--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
+    "@next/env": "^16.1.6",
     "@payloadcms/next": "^3.74.0",
     "@payloadcms/richtext-lexical": "^3.74.0",
     "@repo/docs-source": "workspace:*",
