--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,8 @@ services:
       MINIO_ROOT_PASSWORD: ${S3_SECRET_ACCESS_KEY:?S3_SECRET_ACCESS_KEY is required}
     volumes:
       - minio_data:/data
+    healthcheck:
+      disable: true
     networks:
       - backend
 
@@ -101,6 +103,43 @@ services:
       mc mb --ignore-existing local/${S3_BUCKET:?S3_BUCKET is required};
       mc anonymous set private local/${S3_BUCKET:?S3_BUCKET is required};
       "
+    networks:
+      - backend
+
+  cms-migrate:
+    build:
+      context: .
+      dockerfile: docker/cms.Dockerfile
+      target: builder
+      args:
+        S3_BUCKET: ${S3_BUCKET:?S3_BUCKET is required}
+        S3_REGION: ${S3_REGION:-us-east-1}
+        S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID:?S3_ACCESS_KEY_ID is required}
+        S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY:?S3_SECRET_ACCESS_KEY is required}
+        S3_ENDPOINT: http://minio:9000
+        S3_FORCE_PATH_STYLE: "true"
+    restart: "no"
+    depends_on:
+      postgres:
+        condition: service_healthy
+      postgres-init:
+        condition: service_completed_successfully
+      minio:
+        condition: service_started
+      minio-init:
+        condition: service_completed_successfully
+    environment:
+      NODE_ENV: production
+      NEXT_TELEMETRY_DISABLED: "1"
+      DATABASE_URL: postgresql://${APP_DB_USER:?APP_DB_USER is required}:${APP_DB_PASSWORD:?APP_DB_PASSWORD is required}@postgres:5432/${POSTGRES_DB:?POSTGRES_DB is required}
+      PAYLOAD_SECRET: ${PAYLOAD_SECRET:?PAYLOAD_SECRET is required}
+      S3_BUCKET: ${S3_BUCKET:?S3_BUCKET is required}
+      S3_REGION: ${S3_REGION:-us-east-1}
+      S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID:?S3_ACCESS_KEY_ID is required}
+      S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY:?S3_SECRET_ACCESS_KEY is required}
+      S3_ENDPOINT: http://minio:9000
+      S3_FORCE_PATH_STYLE: "true"
+    command: /bin/sh -c "pnpm --filter ./apps/cms payload migrate"
     networks:
       - backend
 
@@ -124,6 +163,8 @@ services:
       minio:
         condition: service_started
       minio-init:
+        condition: service_completed_successfully
+      cms-migrate:
         condition: service_completed_successfully
     environment:
       NODE_ENV: production
