--- a/apps/cms/docker-compose.yml
+++ b/apps/cms/docker-compose.yml
@@ -56,6 +56,8 @@ services:
       - '127.0.0.1:9001:9001'
     volumes:
       - minio_data:/data
+    healthcheck:
+      disable: true
 
   minio-init:
     image: minio/mc:latest
