--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,7 @@ services:
     environment:
       MINIO_ROOT_USER: ${S3_ACCESS_KEY_ID:?S3_ACCESS_KEY_ID is required}
       MINIO_ROOT_PASSWORD: ${S3_SECRET_ACCESS_KEY:?S3_SECRET_ACCESS_KEY is required}
+      MINIO_API_CORS_ALLOW_ORIGIN: ${MINIO_API_CORS_ALLOW_ORIGIN:-http://localhost:3000}
     volumes:
       - minio_data:/data
     healthcheck:
@@ -133,13 +134,15 @@ services:
       NEXT_TELEMETRY_DISABLED: "1"
       DATABASE_URL: postgresql://${APP_DB_USER:?APP_DB_USER is required}:${APP_DB_PASSWORD:?APP_DB_PASSWORD is required}@postgres:5432/${POSTGRES_DB:?POSTGRES_DB is required}
       PAYLOAD_SECRET: ${PAYLOAD_SECRET:?PAYLOAD_SECRET is required}
+      DOCS_EMAIL: ${DOCS_EMAIL:-}
+      DOCS_PASSWORD: ${DOCS_PASSWORD:-}
       S3_BUCKET: ${S3_BUCKET:?S3_BUCKET is required}
       S3_REGION: ${S3_REGION:-us-east-1}
       S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID:?S3_ACCESS_KEY_ID is required}
       S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY:?S3_SECRET_ACCESS_KEY is required}
       S3_ENDPOINT: http://minio:9000
       S3_FORCE_PATH_STYLE: "true"
-    command: /bin/sh -c "pnpm --filter ./apps/cms payload migrate"
+    command: /bin/sh -c "pnpm --filter ./apps/cms payload migrate && pnpm --filter ./apps/cms payload run scripts/bootstrap-docs-user.ts"
     networks:
       - backend
 
@@ -185,7 +188,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          'node -e "fetch(''http://127.0.0.1:3000'').then((res)=>process.exit(res.status < 500 ? 0 : 1)).catch(()=>process.exit(1))"',
+          'node -e "fetch(''http://127.0.0.1:3000/api/users/login'', { method: ''POST'', headers: { ''Content-Type'': ''application/json'' }, body: JSON.stringify({ email: ''healthcheck@example.com'', password: ''invalid'' }) }).then((res)=>process.exit(res.status < 500 ? 0 : 1)).catch(()=>process.exit(1))"',
         ]
       interval: 20s
       timeout: 10s
