--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ PAYLOAD_SECRET=
 
 S3_BUCKET=payload-media
 S3_REGION=us-east-1
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY=
+S3_ACCESS_KEY_ID=minioadmin
+S3_SECRET_ACCESS_KEY=minioadmin123
 S3_ENDPOINT=http://localhost:9000
 S3_FORCE_PATH_STYLE=true
 
