--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "check-types": "turbo run check-types",
     "clean:all": "pwsh scripts/clean-all.ps1",
     "dev": "turbo run dev",
+    "dev:reset": "pwsh scripts/dev-reset.ps1",
     "format": "prettier . --write",
     "lint": "turbo run lint"
   },
