--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@base-ui/react": "^1.1.0",
     "@next/env": "^16.1.6",
-    "@payloadcms/next": "^3.74.0",
-    "@payloadcms/richtext-lexical": "^3.74.0",
+    "@payloadcms/next": "^3.76.1",
+    "@payloadcms/richtext-lexical": "^3.76.1",
     "@repo/docs-source": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,19 +22,19 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "fumadocs-core": "^16.5.4",
-    "fumadocs-ui": "npm:@fumadocs/base-ui@^16.5.4",
+    "fumadocs-ui": "^16.5.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "payload": "^3.74.0",
+    "payload": "^3.76.1",
     "react": "^19.2.4",
-    "react-day-picker": "^9.13.0",
+    "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.4",
-    "react-resizable-panels": "^4.6.0",
-    "recharts": "3.7.0",
-    "shadcn": "^3.8.3",
+    "react-resizable-panels": "^4.6.2",
+    "recharts": "^3.7.0",
+    "shadcn": "^3.8.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
@@ -46,8 +46,8 @@
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^25.2.1",
-    "@types/react": "^19.2.13",
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
     "lexical": "^0.40.0",
