feat(docs): refine service theming and add next cleanup script
- update docs color tokens and service-accent application in layout/switcher/search UI
- fix rich text image zoom figure child rendering to remove React key warning
- add `clean:next` script and reuse it from `clean:all`
- include lockfile updates (fumadocs core/ui 16.6.0)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "turbo run build",
     "check-types": "turbo run check-types",
     "clean:all": "pwsh scripts/clean-all.ps1",
+    "clean:next": "pwsh scripts/clean-next.ps1",
     "dev": "turbo run dev",
     "dev:reset": "pwsh scripts/dev-reset.ps1",
     "format": "prettier . --write",
