Small ui fix in docs

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -22,7 +22,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "fumadocs-core": "^16.5.4",
-    "fumadocs-ui": "^16.5.4",
+    "fumadocs-ui": "npm:@fumadocs/base-ui@^16.5.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
