--- a/.env.production.example
+++ b/.env.production.example
@@ -18,6 +18,7 @@ S3_ENDPOINT=http://minio:9000
 S3_FORCE_PATH_STYLE=true
 
 # Docs <-> CMS connection
+DOCS_SITE_URL=https://docs.example.com
 DOCS_CMS_URL=http://cms:3000
 DOCS_ALLOW_LOCAL_IP=true
 DOCS_INCLUDE_DRAFTS=false
