--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ S3_ENDPOINT=http://localhost:9000
 S3_FORCE_PATH_STYLE=true
 
 # Docs app
+DOCS_SITE_URL=http://localhost:3001
 DOCS_CMS_URL=http://localhost:3000
 DOCS_ALLOW_LOCAL_IP=true
 DOCS_INCLUDE_DRAFTS=false
