--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -21,6 +21,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "feed": "^4.2.2",
     "fumadocs-core": "^16.5.4",
     "fumadocs-ui": "npm:@fumadocs/base-ui@^16.5.4",
     "input-otp": "^1.4.2",
