--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
       "env": [
         "NODE_ENV",
         "DOCS_CMS_URL",
+        "DOCS_SITE_URL",
         "DOCS_INCLUDE_DRAFTS",
         "DOCS_EMAIL",
         "DOCS_PASSWORD",
