feat(docs): add page/block feedback flows and wrap docs pages with feedback container
- add reusable feedback components + zod schemas for page and block submissions
- introduce `DocsPageWithFeedback` and use it in docs index and service slug pages
- add fumadocs CLI config (`apps/docs/cli.json`) and dependency updates
- include minor cleanup in docs error page imports

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
+    "@fumadocs/cli": "^1.2.4",
     "@next/env": "^16.1.6",
     "@payloadcms/next": "^3.76.1",
     "@payloadcms/richtext-lexical": "^3.76.1",
