feat(docs): add CMS-based feedback blocks with GitHub Discussions integration
- add page-level and block-level feedback UI/components
- implement server actions for page/block feedback submission
- add GitHub App + Discussions integration (create or comment thread)
- adapt CMS richtext renderer to wrap paragraphs with deterministic feedback block IDs
- wire feedback actions through docs page routes and CMS content pipeline
- add feedback schemas and config parsing utilities
- add docs app Vitest setup and tests for block ID stability and GitHub env parsing
- document required feedback env vars in .env examples
- update docs dependencies and lockfile

--- a/.env.production.example
+++ b/.env.production.example
@@ -24,3 +24,10 @@ DOCS_ALLOW_LOCAL_IP=true
 DOCS_INCLUDE_DRAFTS=false
 DOCS_EMAIL=
 DOCS_PASSWORD=
+
+# Docs feedback (GitHub Discussions)
+DOCS_FEEDBACK_GITHUB_OWNER=
+DOCS_FEEDBACK_GITHUB_REPO=
+DOCS_FEEDBACK_GITHUB_CATEGORY=Docs Feedback
+GITHUB_APP_ID=
+GITHUB_APP_PRIVATE_KEY=
