feat(docs): add CMS-backed LLM endpoints and optional Ask AI integration
- add rich-text-to-markdown serialization and LLM text helpers for CMS content
- add AI-friendly routes: /llms-full.txt and /llms.mdx/[[...slug]]
- add proxy rewrites for *.mdx paths and Accept-based markdown negotiation
- integrate page actions (Copy Markdown + Open options) into docs pages
- add Ask AI UI and /api/chat endpoint with graceful no-key behavior
- make INKEEP_API_KEY optional by hiding Ask AI UI when unset
- add required docs app dependencies and update env/turbo configuration

--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
         "DOCS_INCLUDE_DRAFTS",
         "DOCS_EMAIL",
         "DOCS_PASSWORD",
-        "DOCS_ALLOW_LOCAL_IP"
+        "DOCS_ALLOW_LOCAL_IP",
+        "INKEEP_API_KEY"
       ],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"]
