--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,11 +11,15 @@
     "start": "next start --port 3001"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^2.0.30",
+    "@ai-sdk/react": "^3.0.88",
     "@base-ui/react": "^1.1.0",
     "@next/env": "^16.1.6",
     "@payloadcms/next": "^3.76.1",
     "@payloadcms/richtext-lexical": "^3.76.1",
+    "@radix-ui/react-presence": "^1.1.5",
     "@repo/docs-source": "workspace:*",
+    "ai": "^6.0.86",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -24,6 +28,7 @@
     "feed": "^4.2.2",
     "fumadocs-core": "^16.5.4",
     "fumadocs-ui": "npm:@fumadocs/base-ui@^16.5.4",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
@@ -35,9 +40,13 @@
     "react-dom": "^19.2.4",
     "react-resizable-panels": "^4.6.2",
     "recharts": "^3.7.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.2",
     "shadcn": "^3.8.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "unist-util-visit": "^5.1.0",
     "vaul": "^1.1.2",
     "zod": "^4.3.6"
   },
@@ -46,6 +55,7 @@
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/hast": "^3.0.4",
     "@types/mdx": "^2.0.13",
     "@types/node": "^25.2.3",
     "@types/react": "^19.2.14",
