Fix production errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -219,6 +219,11 @@ services:
       DOCS_INCLUDE_DRAFTS: ${DOCS_INCLUDE_DRAFTS:-false}
       DOCS_EMAIL: ${DOCS_EMAIL:-}
       DOCS_PASSWORD: ${DOCS_PASSWORD:-}
+      DOCS_FEEDBACK_GITHUB_OWNER: ${DOCS_FEEDBACK_GITHUB_OWNER:-}
+      DOCS_FEEDBACK_GITHUB_REPO: ${DOCS_FEEDBACK_GITHUB_REPO:-}
+      DOCS_FEEDBACK_GITHUB_CATEGORY: ${DOCS_FEEDBACK_GITHUB_CATEGORY:-Docs Feedback}
+      GITHUB_APP_ID: ${GITHUB_APP_ID:-}
+      GITHUB_APP_PRIVATE_KEY: ${GITHUB_APP_PRIVATE_KEY:-}
     expose:
       - "3001"
     healthcheck:
