feat(docs,cms): cache latest-version redirects with CMS-triggered revalidation
- add tagged latest-version cache helper for docs service route lookups
- add secure docs API endpoint to revalidate latest-version cache tags
- wire CMS latestVersion sync to trigger docs revalidation only when latest actually changes
- add tests for docs revalidation route, service redirect behavior, and CMS sync/revalidation flow
- add env/docker config for DOCS_REVALIDATE_URL and DOCS_REVALIDATE_SECRET

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ S3_FORCE_PATH_STYLE=true
 # Docs app
 DOCS_SITE_URL=http://localhost:3001
 DOCS_CMS_URL=http://localhost:3000
+DOCS_REVALIDATE_URL=http://localhost:3001/api/revalidate/latest-version
+DOCS_REVALIDATE_SECRET=
 DOCS_ALLOW_LOCAL_IP=true
 DOCS_INCLUDE_DRAFTS=false
 DOCS_EMAIL=
