--- a/.env.production.example
+++ b/.env.production.example
@@ -20,6 +20,8 @@ S3_FORCE_PATH_STYLE=true
 # Docs <-> CMS connection
 DOCS_SITE_URL=https://docs.example.com
 DOCS_CMS_URL=http://cms:3000
+DOCS_REVALIDATE_URL=http://docs:3001/api/revalidate/latest-version
+DOCS_REVALIDATE_SECRET=replace-with-a-shared-revalidate-secret
 DOCS_ALLOW_LOCAL_IP=true
 DOCS_INCLUDE_DRAFTS=false
 DOCS_EMAIL=
