--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -176,6 +176,8 @@ services:
       NEXT_TELEMETRY_DISABLED: "1"
       DATABASE_URL: postgresql://${APP_DB_USER:?APP_DB_USER is required}:${APP_DB_PASSWORD:?APP_DB_PASSWORD is required}@postgres:5432/${POSTGRES_DB:?POSTGRES_DB is required}
       PAYLOAD_SECRET: ${PAYLOAD_SECRET:?PAYLOAD_SECRET is required}
+      DOCS_REVALIDATE_URL: ${DOCS_REVALIDATE_URL:-http://docs:3001/api/revalidate/latest-version}
+      DOCS_REVALIDATE_SECRET: ${DOCS_REVALIDATE_SECRET:-}
       S3_BUCKET: ${S3_BUCKET:?S3_BUCKET is required}
       S3_REGION: ${S3_REGION:-us-east-1}
       S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID:?S3_ACCESS_KEY_ID is required}
@@ -215,6 +217,7 @@ services:
       PORT: "3001"
       NEXT_TELEMETRY_DISABLED: "1"
       DOCS_CMS_URL: ${DOCS_CMS_URL:-http://cms:3000}
+      DOCS_REVALIDATE_SECRET: ${DOCS_REVALIDATE_SECRET:-}
       DOCS_ALLOW_LOCAL_IP: ${DOCS_ALLOW_LOCAL_IP:-true}
       DOCS_INCLUDE_DRAFTS: ${DOCS_INCLUDE_DRAFTS:-false}
       DOCS_EMAIL: ${DOCS_EMAIL:-}
