--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -18,15 +18,14 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
-    "@next/env": "^16.1.6",
     "@payloadcms/db-postgres": "^3.76.1",
     "@payloadcms/next": "^3.76.1",
     "@payloadcms/richtext-lexical": "^3.76.1",
     "@payloadcms/storage-s3": "^3.76.1",
     "@payloadcms/translations": "^3.76.1",
     "@payloadcms/ui": "^3.76.1",
+    "@repo/env": "workspace:*",
     "cross-env": "^10.1.0",
-    "dotenv": "^17.2.4",
     "graphql": "^16.12.0",
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
