--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -16,11 +16,11 @@
     "@ai-sdk/react": "^3.0.88",
     "@base-ui/react": "^1.1.0",
     "@fumadocs/cli": "^1.2.4",
-    "@next/env": "^16.1.6",
     "@payloadcms/next": "^3.76.1",
     "@payloadcms/richtext-lexical": "^3.76.1",
     "@radix-ui/react-presence": "^1.1.5",
     "@repo/docs-source": "workspace:*",
+    "@repo/env": "workspace:*",
     "ai": "^6.0.86",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
