--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -10,7 +10,7 @@
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
-    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
+    "lint": "cross-env NODE_OPTIONS=--no-deprecation eslint .",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
@@ -36,6 +36,7 @@
     "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
     "@playwright/test": "^1.58.2",
     "@testing-library/react": "^16.3.2",
     "@types/node": "^25.2.3",
