--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -190,7 +190,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          'node -e "const net=require(''node:net'');const socket=net.connect({host:''127.0.0.1'',port:3000});socket.setTimeout(5000);socket.on(''connect'',()=>{socket.end();process.exit(0)});socket.on(''timeout'',()=>{socket.destroy();process.exit(1)});socket.on(''error'',()=>process.exit(1));"',
+          'node -e "fetch(''http://127.0.0.1:3000/api/health/payload'',{cache:''no-store''}).then(async r=>{if(!r.ok){throw new Error(await r.text())}const d=await r.json();if(d.ok!==true){throw new Error(JSON.stringify(d))}process.exit(0)}).catch(()=>process.exit(1));"',
         ]
       interval: 20s
       timeout: 10s
