--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -190,7 +190,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          'node -e "fetch(''http://127.0.0.1:3000/api/health/payload'',{cache:''no-store''}).then(async r=>{if(!r.ok){throw new Error(await r.text())}const d=await r.json();if(d.ok!==true){throw new Error(JSON.stringify(d))}process.exit(0)}).catch(()=>process.exit(1));"',
+          'node -e "fetch(''http://127.0.0.1:3000/api/health/payload'',{cache:''no-store''}).then(async r=>{const body=await r.text();if(!r.ok){console.error(body||(''status ''+r.status));process.exit(1)}let d;try{d=JSON.parse(body)}catch{console.error(body||''invalid health payload'');process.exit(1)}if(d.ok!==true){console.error(body||JSON.stringify(d));process.exit(1)}process.exit(0)}).catch((e)=>{console.error(e?.message||String(e));process.exit(1)});"',
         ]
       interval: 20s
       timeout: 10s
