fix(deploy): use app DB creds for cms and harden postgres-init auth fallback
Switch cms/cms-migrate PGUSER+PGPASSWORD to APP_DB_USER/APP_DB_PASSWORD (remove superuser DATABASE_URL dependency), and make postgres-init skip admin sync when POSTGRES auth drifts but app-role auth is already valid.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,10 +134,9 @@ services:
       NEXT_TELEMETRY_DISABLED: "1"
       PGHOST: postgres
       PGPORT: "5432"
-      PGUSER: ${POSTGRES_USER:?POSTGRES_USER is required}
-      PGPASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
+      PGUSER: ${APP_DB_USER:?APP_DB_USER is required}
+      PGPASSWORD: ${APP_DB_PASSWORD:?APP_DB_PASSWORD is required}
       PGDATABASE: ${POSTGRES_DB:?POSTGRES_DB is required}
-      DATABASE_URL: postgresql://${POSTGRES_USER:?POSTGRES_USER is required}:${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}@postgres:5432/${POSTGRES_DB:?POSTGRES_DB is required}
       PAYLOAD_SECRET: ${PAYLOAD_SECRET:?PAYLOAD_SECRET is required}
       DOCS_EMAIL: ${DOCS_EMAIL:-}
       DOCS_PASSWORD: ${DOCS_PASSWORD:-}
@@ -181,10 +180,9 @@ services:
       NEXT_TELEMETRY_DISABLED: "1"
       PGHOST: postgres
       PGPORT: "5432"
-      PGUSER: ${POSTGRES_USER:?POSTGRES_USER is required}
-      PGPASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
+      PGUSER: ${APP_DB_USER:?APP_DB_USER is required}
+      PGPASSWORD: ${APP_DB_PASSWORD:?APP_DB_PASSWORD is required}
       PGDATABASE: ${POSTGRES_DB:?POSTGRES_DB is required}
-      DATABASE_URL: postgresql://${POSTGRES_USER:?POSTGRES_USER is required}:${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}@postgres:5432/${POSTGRES_DB:?POSTGRES_DB is required}
       PAYLOAD_SECRET: ${PAYLOAD_SECRET:?PAYLOAD_SECRET is required}
       DOCS_REVALIDATE_URL: ${DOCS_REVALIDATE_URL:-http://docs:3001/api/revalidate/latest-version}
       DOCS_REVALIDATE_SECRET: ${DOCS_REVALIDATE_SECRET:-}
