fix(deploy): auto-recover Postgres auth drift and harden DB reconciliation
- run postgres-init in postgres PID/network namespace with pgdata mounted for in-place auth reload
- add local-trust recovery in init script to re-sync POSTGRES_USER and APP_DB_USER passwords, then restore pg_hba
- harden cms DB reconcile: require admin creds, auth via admin DB, and enforce role/database/grants/default privileges sync

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,17 +33,21 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    pid: "service:postgres"
+    network_mode: "service:postgres"
     environment:
       POSTGRES_DB: ${POSTGRES_DB:?POSTGRES_DB is required}
       POSTGRES_USER: ${POSTGRES_USER:?POSTGRES_USER is required}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
       APP_DB_USER: ${APP_DB_USER:?APP_DB_USER is required}
       APP_DB_PASSWORD: ${APP_DB_PASSWORD:?APP_DB_PASSWORD is required}
+      PGHOST: 127.0.0.1
+      PGPORT: "5432"
+      PGDATA: /var/lib/postgresql/data/pgdata
     entrypoint: ["/bin/sh", "/scripts/01-create-app-user.sh"]
     volumes:
       - ./docker/postgres/init:/scripts:ro
-    networks:
-      - backend
+      - postgres_data:/var/lib/postgresql/data
 
   postgres-backup:
     image: postgres:16-alpine
